--- a/Cribbage/Cribbage.vcxproj
+++ b/Cribbage/Cribbage.vcxproj
@@ -115,6 +115,7 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="Deck.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameCLI.h" />
     <ClInclude Include="Hand.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
@@ -122,6 +123,7 @@
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Deck.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameCLI.cpp" />
     <ClCompile Include="Hand.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
