--- a/Cribbage/Cribbage.vcxproj.filters
+++ b/Cribbage/Cribbage.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameCLI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameCLI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
