--- a/Cribbage/Cribbage.vcxproj.filters
+++ b/Cribbage/Cribbage.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Board.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PointCounter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Board.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PointCounter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
